Do not collapse TR reports in FetchListUtil in order to fetch TR reports in a single-month fashion