@@ -17,35 +17,30 @@ import org.junit.Test;
 
 public class FetchListUtilTest {
 
-  public static List<FetchItem> createSampleFetchList() {
+  private static List<FetchItem> createSampleFetchList() {
     List<YearMonth> months1 =
-        IntStream.range(0, 40)
-            .boxed()
-            .map(YearMonth.of(2018, 1)::plusMonths)
-            .collect(Collectors.toList());
+        IntStream.range(0, 40).boxed().map(YearMonth.of(2018, 1)::plusMonths).toList();
     List<YearMonth> months2 = Arrays.asList(YearMonth.of(2022, 1), YearMonth.of(2022, 2));
     List<YearMonth> months3 =
-        IntStream.range(0, 14)
-            .boxed()
-            .map(YearMonth.of(2018, 7)::plusMonths)
-            .collect(Collectors.toList());
+        IntStream.range(0, 14).boxed().map(YearMonth.of(2018, 7)::plusMonths).toList();
 
     List<FetchItem> jr1 =
         Stream.concat(months1.stream(), months2.stream())
             .map(ym -> createFetchItemFromYearMonth("JR1", ym))
-            .collect(Collectors.toList());
+            .toList();
 
     List<FetchItem> pr1 =
-        months3.stream()
-            .map(ym -> createFetchItemFromYearMonth("PR1", ym))
-            .collect(Collectors.toList());
+        months3.stream().map(ym -> createFetchItemFromYearMonth("PR1", ym)).toList();
+
+    List<FetchItem> tr =
+        months2.stream().map(ym -> createFetchItemFromYearMonth("TR", ym)).toList();
 
     List<FetchItem> duplicates =
         List.of(
             createFetchItemFromYearMonth("JR1", YearMonth.of(2018, 1)),
             createFetchItemFromYearMonth("PR1", YearMonth.of(2018, 7)));
 
-    return Stream.of(jr1, pr1, duplicates).flatMap(Collection::stream).collect(Collectors.toList());
+    return Stream.of(jr1, pr1, tr, duplicates).flatMap(Collection::stream).toList();
   }
 
   @Test
@@ -87,10 +82,8 @@ public class FetchListUtilTest {
         .isThrownBy(() -> createFetchItemFromYearMonth("JR1", null, YearMonth.now()));
   }
 
-  // TODO: add more test cases for collapse and expand
-
   @Test
-  public void testCollapse() {
+  public void testCollapseJR1() {
     final String reportType = "JR1";
     List<FetchItem> fetchItemList =
         List.of(
@@ -108,22 +101,37 @@ public class FetchListUtilTest {
   }
 
   @Test
-  public void testCollapse2() {
+  public void testCollapseTR() {
+    final String reportType = "TR";
+    List<FetchItem> fetchItemList =
+        List.of(
+            createFetchItemFromYearMonth(reportType, YearMonth.of(2019, 12)),
+            createFetchItemFromYearMonth(reportType, YearMonth.of(2020, 1)),
+            createFetchItemFromYearMonth(reportType, YearMonth.of(2020, 2)));
+    List<FetchItem> result = collapse(fetchItemList);
+
+    assertThat(fetchItemList).hasSize(3);
+    assertThat(result).hasSize(3).containsExactlyElementsOf(fetchItemList);
+  }
+
+  @Test
+  public void testCollapseMultipleReportTypes() {
     List<FetchItem> collapsed = collapse(createSampleFetchList());
     assertThat(collapsed)
-        .hasSize(7)
-        .containsExactly(
+        .containsExactlyInAnyOrder(
             createFetchItemFromYearMonth("JR1", YearMonth.of(2018, 1), YearMonth.of(2018, 12)),
             createFetchItemFromYearMonth("JR1", YearMonth.of(2019, 1), YearMonth.of(2019, 12)),
             createFetchItemFromYearMonth("JR1", YearMonth.of(2020, 1), YearMonth.of(2020, 12)),
             createFetchItemFromYearMonth("JR1", YearMonth.of(2021, 1), YearMonth.of(2021, 4)),
             createFetchItemFromYearMonth("JR1", YearMonth.of(2022, 1), YearMonth.of(2022, 2)),
             createFetchItemFromYearMonth("PR1", YearMonth.of(2018, 7), YearMonth.of(2019, 6)),
-            createFetchItemFromYearMonth("PR1", YearMonth.of(2019, 7), YearMonth.of(2019, 8)));
+            createFetchItemFromYearMonth("PR1", YearMonth.of(2019, 7), YearMonth.of(2019, 8)),
+            createFetchItemFromYearMonth("TR", YearMonth.of(2022, 1)),
+            createFetchItemFromYearMonth("TR", YearMonth.of(2022, 2)));
   }
 
   @Test
-  public void testCollapseAndExpand() {
+  public void testCollapseAndExpandMultipleReportTypes() {
     List<FetchItem> distinctFetchList =
         createSampleFetchList().stream().distinct().collect(Collectors.toList());
     List<FetchItem> collapsed = collapse(distinctFetchList);
@@ -133,7 +141,7 @@ public class FetchListUtilTest {
   }
 
   @Test
-  public void testExpand() {
+  public void testExpandJR1() {
     final String reportType = "JR1";
 
     FetchItem fetchItem = new FetchItem(reportType, "2019-12-01", "2020-02-29");
